# dicom2img

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: pr.yml  release.yml
src/dicom2img/: __init__.py  cli.py  tools.py
tests/: test_import.py
